[bugfix] ribben dropdown text overflow in Russian (#2756)

--- a/src/components/Dropdown/Dropdown.scss
+++ b/src/components/Dropdown/Dropdown.scss
@@ -11,7 +11,6 @@
   justify-content: space-between;
   align-items: center;
   z-index: 80;
-
   border-radius: 4px;
   height: 28px;
   border: 1px solid	var(--border);
@@ -23,17 +22,26 @@
   cursor: pointer;
 
   .down-arrow {
+    flex: 0.2;
     width: 12px;
     height: 16px;
     margin-top: 2px;
   }
 
   .picked-option {
-    flex: 1;
+    width: 100%;
     display: flex;
     flex-direction: row;
     justify-content: space-between;
     align-items: center;
+   
+    .picked-option-text {
+      flex: 0.8;
+      width: 100%;
+      white-space: nowrap;
+      overflow: hidden;
+      text-overflow: ellipsis;
+    }
   }
 
   &:disabled {
